--- a/DesktopAPP/CanteenApp/CanteenApp.csproj
+++ b/DesktopAPP/CanteenApp/CanteenApp.csproj
@@ -8,4 +8,32 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="MySqlConnector" Version="2.3.6" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Reference Include="BarcodeScannerLib">
+      <HintPath>..\..\..\..\Users\darks\Desktop\BarcodeScannerLib.dll</HintPath>
+    </Reference>
+    <Reference Include="GlobalHook">
+      <HintPath>..\..\..\..\Users\darks\Desktop\GlobalHook.dll</HintPath>
+    </Reference>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Compile Update="Properties\Resources.Designer.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Update="Properties\Resources.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+  </ItemGroup>
+
 </Project>
