--- a/backend/package.json
+++ b/backend/package.json
@@ -10,9 +10,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/node": "^20.12.7",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2"
   },
   "devDependencies": {
-    "@types/express": "^4.17.21"
+    "@types/express": "^4.17.21",
+    "mysql2": "^3.9.6",
+    "sequelize": "^6.37.3"
   }
 }
