--- a/i-canteen-front/package.json
+++ b/i-canteen-front/package.json
@@ -11,8 +11,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@date-io/date-fns": "^3.0.0",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
     "@mantine/core": "^7.8.0",
     "@mantine/hooks": "^7.8.0",
+    "@mui/lab": "^5.0.0-alpha.170",
+    "@mui/material": "^5.15.15",
+    "@mui/x-date-pickers": "^7.2.0",
+    "@mui/x-date-pickers-pro": "^7.2.0",
+    "date-fns": "^3.6.0",
     "hamburger-react": "^2.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
