--- a/DesktopAPP/CanteenApp/Properties/launchSettings.json
+++ b/DesktopAPP/CanteenApp/Properties/launchSettings.json
@@ -1,8 +1,7 @@
 {
   "profiles": {
     "CanteenApp": {
-      "commandName": "Project",
-      "commandLineArgs": "-d"
+      "commandName": "Project"
     }
   }
 }
